# homework

./: .gitignore  README.md  go.work
algorithm/: CMakeLists.txt  TODO
algorithm/graph/: dijkstra.cpp  dijkstra.h  edge_weighted_digraph.cpp  edge_weighted_digraph.h
algorithm/test/: dijkstra_test.cpp
lecture/DistributedSystems/gfs/: README.md  gfs.md
lecture/DistributedSystems/labgob/: go.mod
lecture/DistributedSystems/labrpc/: go.mod  labrpc.go
lecture/DistributedSystems/mapreduce/: README.md  mapreduce.md  test-mr.sh
lecture/MachineLearning/: README.md
lecture/MachineLearning/DeepLearning/: README.md  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb  chapter6.ipynb  d2l_modify.py  introduction.ipynb  linear_regression.ipynb  multilayer_perceptron.ipynb  softmax_regression.ipynb
lecture/MachineLearning/SupervisedLearning/: README.md  decision_tree_and_regression_tree.ipynb  ensemble_learning.ipynb  linear_regression.ipynb  logistic_regression.ipynb  naive_bayes_classifier.ipynb  perceptron.ipynb  support_vector_machines.ipynb  theory.ipynb
lecture/OperatingSystem/nand2tetris/: README.md
lecture/nand2tetris/project01/: And.hdl  And16.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Or.hdl  Or16.hdl
lecture/nand2tetris/project02/: ALU.hdl  FullAdder.hdl
lecture/nand2tetris/project06/: assembler.py
lecture/nand2tetris/project08/: VMTranslator.py
lecture/nand2tetris/project09/: README.md
lecture/nand2tetris/project10/: jack_tokenizer.py
lecture/nand2tetris/project11/: jack_compiler_engine.py  main.py
(+148 files in other folders)
